# peach

./: .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
examples/: README.md  basic.rs  events.rs  readme-new.rs  readme.rs  test.rs
examples-old/: basic.rs
src/: color.rs  config.rs  constructors.rs  consts.rs  draw.rs  drawable.rs  error.rs  graphics.rs  lib.rs  lifecycle.rs  render.rs  run.rs  sketch.rs  state.rs  types.rs  vertex.rs
src-old/: color.rs  drawable.rs  sketch.rs
src-old/shaders/: shader.frag  shader.vert
src/graphics/: context.rs  mod.rs
src/render/: construct.rs  context.rs  graphics.rs  mod.rs  pipeline.rs  renderer.rs  shader.wgsl
src/shader/: shader.frag.spv  shader.vert  shader.vert.spv
src/shaders/: shader.vert  shader.vert.spv
src/sketch/: handler.rs  mod.rs  run.rs  sketch.rs
