[package]
name = "peach"
version = "0.4.0"
authors = ["Timothy Davis <tmthydvs@gmail.com>"]
edition = "2018"

description = "Sandbox engine for Rust, inspired by Processing"

license = "MIT"
repository = "https://github.com/flmng0/peach"
readme = "README.md"

keywords = ["processing", "sandbox", "drawing"]

[features]
default = []

force_f32 = []

[dependencies]
anyhow = "1.0.40"
bytemuck = "1.5.1"
euclid = "0.22.1"
lyon_tessellation = "0.16.2"
pollster = "0.2.4"
rgb = "0.8.27"
thiserror = "1.0.24"
wgpu = "0.8.0"
wgpu-subscriber = "0.1.0"
winit = "0.24.0"
