[package]
name = "peach"
version = "0.4.0"
authors = ["Timothy Davis <tmthydvs@gmail.com>"]
edition = "2018"

description = "Sandbox engine for Rust, inspired by Processing"

license = "MIT"
repository = "https://github.com/flmng0/peach"
readme = "README.md"

keywords = ["processing", "sandbox", "drawing"]

resolver="2"

[features]
default = []

force_f32 = []

[dependencies]
anyhow = "1.0.52"
bytemuck = "1.7.3"
euclid = "0.22.6"
glam = "0.20.2"
lyon_tessellation = "0.17.10"
pollster = "0.2.4"
rgb = "0.8.31"
thiserror = "1.0.30"
wgpu = "0.12.0"
wgpu-subscriber = "0.1.0"
winit = "0.26.1"
